# rust-zsign

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
bindings/: bindings.rs
example/: Cargo.toml
example/src/: main.rs
src/: error.rs  lib.rs  zsign.rs
ssl/: openssl.cnf
zsign/: Dockerfile  archo.cpp  archo.h  build.sh  bundle.cpp  bundle.h  macho.cpp  macho.h  openssl.cpp  zsign.cpp  zsign.h
zsign/common/: common.cpp  common.h
