[package]
name = "zsign"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[workspace]
members = ["example"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
[dependencies]
libc = "0.2.152"
openssl-sys = "0.9.101"

[build-dependencies]
bindgen = "0.69.4"
cc = { version = "1.0.83", features = ["parallel"] }

[lib]
name = "zsign"
path = "src/lib.rs"
