[package]
name = "zsign"
version = "0.0.5"
edition = "2021"
authors = ["lake <amwoqmgo@mail.com>"]
description = "ipa sign"
repository = "https://github.com/dounine/rust-zsign"
license = "MIT"
build = "build.rs"

exclude = ["ipa"]

[workspace]
members = ["example"]
[profile.release]
lto = true
opt-level = 3
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2.152"
openssl-sys = "0.9.101"

[build-dependencies]
bindgen = "0.69.4"
cc = { version = "1.0.83", features = ["parallel"] }

[lib]
name = "zsign"
path = "src/lib.rs"
